@startuml
namespace coordination {
    class Coordinator << (S,Aquamarine) >> {
        - devMode bool

        + DB *nutsdb.DB

        + NewCoordinator(ctx context.Context, opts ...Option) error
        + WithDevMode(mode bool) Option
        + WithDataDir(dir string) Option
        + StartRPCCoordinationServer(ctx context.Context) error

    }
    class RegistrationServer << (S,Aquamarine) >> {
        + DevMode bool
        + ID string
        + DB *nutsdb.DB

        - createRegistration(ctx context.Context, nrr *commands.NodeRegistrationRequest) error

        + Register(ctx context.Context, in *commands.NodeRegistrationRequest) (*commands.NodeRegistrationResponse, error)

    }
    class coordination.Option << (T, #FF7700) >>  {
    }
}
"connections.Tailnet" *-- "coordination.Coordinator"
"commands.UnimplementedRegistrationServer" *-- "coordination.RegistrationServer"


"coordination.<font color=blue>func</font>(*Coordinator) error" #.. "coordination.Option"
@enduml
